module12/config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  namespace: httpserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpserver
